fix: enable notify-all button for admins, fix chat search-panel z-index, fix account-btn presence overflow

--- a/src/dotnet/Chat.UI.Blazor/Components/AccountDropdown/account-dropdown.css
+++ b/src/dotnet/Chat.UI.Blazor/Components/AccountDropdown/account-dropdown.css
@@ -15,6 +15,9 @@
 .btn.btn-square.account-btn {
     @apply bg-transparent;
 }
+body.narrow .btn.btn-square.account-btn {
+    @apply rounded-none;
+}
 .btn-square.account-btn .avatar-badge {
     @apply p-0;
     @apply bg-transparent;
